--- a/TeacherClient/src/teacherclient/gui/view/MainView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/MainView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,6 +15,7 @@
          </font>
       </Label>
       <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0" />
+      <Button layoutX="444.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnMyScheduele" prefHeight="35.0" prefWidth="146.0" text="My Scheduele" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="10.0" />
    </children>
    <stylesheets>
         <URL value="@MainCSS.css" />
