--- a/TeacherClient/src/teacherclient/gui/view/ScheduleView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/ScheduleView.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.ScheduleViewController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.ScheduleViewController">
     <children>
-        <AnchorPane fx:id="schedulePane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
-      <Button mnemonicParsing="false" onAction="#handleScheduleCourse" text="Schedule Course" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+        <AnchorPane fx:id="schedulePane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+      <Button mnemonicParsing="false" onAction="#handleScheduleCourse" stylesheets="@MainCSS.css" text="Schedule Course" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" />
     </children>
 </AnchorPane>
