--- a/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
+++ b/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
@@ -3,6 +3,9 @@
 <?import java.lang.Double?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,19 +14,23 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="659.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" stylesheets="@css/mainwindowviewcss.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
+<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" prefHeight="695.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" stylesheets="@css/mainwindowviewcss.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" text="Schedule:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <MenuBar fx:id="menuBar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#handleLogOut" text="Log out" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+        <Label layoutX="14.0" layoutY="14.0" text="Schedule:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="25.0">
             <font>
                 <Font name="Helvetica Neue Bold" size="36.0" />
             </font>
         </Label>
-        <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" prefWidth="145.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0">
-            <font>
-                <Font name="Helvetica Neue" size="36.0" />
-            </font>
-        </Label>
-        <Polygon id="button" fill="#46a2f8" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="-25.0">
+        <Polygon id="button" fill="#46a2f8" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="0.0">
             <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
@@ -33,7 +40,12 @@
                 <Double fx:value="-60.0" />
             </points>
         </Polygon>
-        <Polygon id="button" fill="#46a2f8" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="-25.0">
+        <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" prefWidth="145.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="25.0">
+            <font>
+                <Font name="Helvetica Neue" size="36.0" />
+            </font>
+        </Label>
+        <Polygon id="button" fill="#46a2f8" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="0.0">
             <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
@@ -65,7 +77,7 @@
                 </Button>
             </children>
         </GridPane>
-        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="75.0">
             <content>
                 <AnchorPane fx:id="scheduleAnchor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" />
             </content>
