--- a/TeacherClient/src/teacherclient/gui/view/MainView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/MainView.fxml
@@ -4,18 +4,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
+<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
    <children>
-      <Label alignment="TOP_LEFT" layoutX="36.0" layoutY="14.0" text="Classes:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <MenuBar fx:id="menuBar" layoutX="10.0" layoutY="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#handleLogOut" text="Log out" />
+               </items>
+            </Menu>
+            <Menu fx:id="loginLbl" disable="true" mnemonicParsing="false" text="Logged in as USER" />
+         </menus>
+      </MenuBar>
+      <Label alignment="TOP_LEFT" layoutX="36.0" layoutY="14.0" text="Classes:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="Helvetica Neue Bold" size="36.0" />
          </font>
       </Label>
-      <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0" />
-      <Button layoutX="444.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnMyScheduele" prefHeight="40.0" prefWidth="146.0" text="My Scheduele" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+      <Button layoutX="444.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnMyScheduele" prefHeight="40.0" prefWidth="146.0" text="My Scheduele" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0" />
+      <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="75.0" />
    </children>
    <stylesheets>
         <URL value="@MainCSS.css" />
