--- a/TeacherClient/src/teacherclient/gui/view/MainView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/MainView.fxml
@@ -27,7 +27,7 @@
             <Font name="Helvetica Neue Bold" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="444.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnMyScheduele" prefHeight="40.0" prefWidth="146.0" text="My Scheduele" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0" />
+      <Button layoutX="444.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnMyScheduele" prefHeight="40.0" prefWidth="146.0" text="My Schedule" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0" />
       <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="75.0" />
    </children>
    <stylesheets>
