--- a/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,10 +12,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="811.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.AbsenceController">
+<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="811.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.AbsenceController">
    <children>
       <ListView fx:id="listviewStudents" focusTraversable="false" layoutX="14.0" layoutY="52.0" maxWidth="-Infinity" minWidth="250.0" onMouseClicked="#studentSelected" prefHeight="386.0" prefWidth="250.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="52.0" />
-      <AnchorPane fx:id="chartPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="52.0" />
+      <AnchorPane fx:id="chartPane" layoutY="103.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="379.0" prefWidth="546.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0" />
       <GridPane layoutX="355.0" layoutY="-10.0" maxWidth="1.7976931348623157E308" prefHeight="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="624.0" minWidth="10.0" prefWidth="513.0" />
@@ -39,6 +40,15 @@
             </Label>
          </children>
       </GridPane>
+      <AnchorPane prefWidth="200.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="52.0">
+         <children>
+            <DatePicker fx:id="calStart" prefHeight="27.0" prefWidth="172.0" AnchorPane.rightAnchor="354.0" AnchorPane.topAnchor="17.0" />
+            <Label text="Start date:" AnchorPane.rightAnchor="461.0" AnchorPane.topAnchor="0.0" />
+            <DatePicker fx:id="calEnd" prefHeight="27.0" prefWidth="172.0" AnchorPane.rightAnchor="177.0" AnchorPane.topAnchor="17.0" />
+            <Label text="End date:" AnchorPane.rightAnchor="295.0" AnchorPane.topAnchor="0.0" />
+            <Button mnemonicParsing="false" onAction="#IntervalAction" prefHeight="27.0" prefWidth="172.0" style="-fx-background-color: #d9d9d9; -fx-text-fill: #434343;" text="Set Interval" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="17.0" />
+         </children>
+      </AnchorPane>
    </children>
    <stylesheets>
         <URL value="@AbsenceCSS.css" />
