--- a/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
@@ -40,15 +40,26 @@
             </Label>
          </children>
       </GridPane>
-      <AnchorPane prefWidth="200.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="52.0">
+      <GridPane AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="52.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="5.0" prefWidth="5.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="5.0" prefWidth="5.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <DatePicker fx:id="calStart" prefHeight="27.0" prefWidth="172.0" AnchorPane.rightAnchor="354.0" AnchorPane.topAnchor="17.0" />
-            <Label text="Start date:" AnchorPane.rightAnchor="461.0" AnchorPane.topAnchor="0.0" />
-            <DatePicker fx:id="calEnd" prefHeight="27.0" prefWidth="172.0" AnchorPane.rightAnchor="177.0" AnchorPane.topAnchor="17.0" />
-            <Label text="End date:" AnchorPane.rightAnchor="295.0" AnchorPane.topAnchor="0.0" />
-            <Button mnemonicParsing="false" onAction="#IntervalAction" prefHeight="27.0" prefWidth="172.0" style="-fx-background-color: #d9d9d9; -fx-text-fill: #434343;" text="Set Interval" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="17.0" />
+            <Button minWidth="100.0" mnemonicParsing="false" onAction="#IntervalAction" prefHeight="27.0" prefWidth="2000.0" style="-fx-background-color: #d9d9d9; -fx-text-fill: #434343;" text="Set Interval" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <DatePicker fx:id="calEnd" maxHeight="27.0" maxWidth="546.0" minWidth="100.0" prefHeight="27.0" prefWidth="2000.0" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+            <DatePicker fx:id="calStart" maxWidth="825.0" minWidth="100.0" prefHeight="27.0" prefWidth="2000.0" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+            <Label text="End date:" GridPane.columnIndex="2" />
+            <Label text="Start date:" />
          </children>
-      </AnchorPane>
+      </GridPane>
    </children>
    <stylesheets>
         <URL value="@AbsenceCSS.css" />
