--- a/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/AbsenceView.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -12,9 +13,23 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="811.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.AbsenceController">
+<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="811.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.AbsenceController">
    <children>
-      <ListView fx:id="listviewStudents" focusTraversable="false" layoutX="14.0" layoutY="52.0" maxWidth="-Infinity" minWidth="250.0" onMouseClicked="#studentSelected" prefHeight="386.0" prefWidth="250.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="52.0" />
+      <GridPane AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="52.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="100.0" prefWidth="250.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="17.0" minHeight="17.0" prefHeight="17.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="17.0" prefWidth="172.0" text="Sort by:" GridPane.halignment="RIGHT" />
+            <ComboBox fx:id="cmbSortListView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="27.0" prefWidth="172.0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <ListView fx:id="listviewStudents" focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" onMouseClicked="#studentSelected" prefWidth="250.0" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
       <AnchorPane fx:id="chartPane" layoutY="103.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="379.0" prefWidth="546.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0" />
       <GridPane layoutX="355.0" layoutY="-10.0" maxWidth="1.7976931348623157E308" prefHeight="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
