--- a/TeacherClient/src/teacherclient/gui/view/AbsenceCSS.css
+++ b/TeacherClient/src/teacherclient/gui/view/AbsenceCSS.css
@@ -37,3 +37,7 @@ and open the template in the editor.
 
 .default-color0.chart-series-line { -fx-stroke: #DB3B26; }
 
+.combo-box .list-cell
+{
+    -fx-padding: 0 0 0 5;
+}
