--- a/SharedClasses/src/sharedclasses/gui/view/LoginWindow.fxml
+++ b/SharedClasses/src/sharedclasses/gui/view/LoginWindow.fxml
@@ -24,12 +24,12 @@
                 <Font name="Helvetica Neue Bold" size="24.0" />
             </font>
         </Label>
-        <TextField fx:id="UsernameField" layoutX="5.0" layoutY="76.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="76.0">
+        <TextField fx:id="usernameField" layoutX="5.0" layoutY="76.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="76.0">
             <font>
                 <Font name="Helvetica Neue" size="18.0" />
             </font>
         </TextField>
-        <PasswordField fx:id="PaswordField" layoutX="5.0" layoutY="146.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="146.0">
+        <PasswordField fx:id="passwordField" layoutX="5.0" layoutY="146.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="146.0">
             <font>
                 <Font name="Helvetica Neue" size="18.0" />
             </font>
@@ -44,7 +44,7 @@
                 <Font name="Helvetica Neue Bold" size="24.0" />
             </font>
         </Label>
-        <CheckBox layoutX="5.0" layoutY="183.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="114.0" selected="true" text="Remember me" textFill="#6c6c6c">
+        <CheckBox fx:id="autoLogin" layoutX="5.0" layoutY="226.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="114.0" text="Auto Login" textFill="#6c6c6c">
             <font>
                 <Font name="Helvetica Neue" size="13.0" />
             </font>
